# coroutine-chat

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
data/: sessions.json  users.json
proxy/: server.js
public/: app.js  index.html  style.css
public/js/: audio_alerts.js  call_fsm.js  webrtc_call.js
public/js/crypto/: key-exchange.js
public/js/e2ee/: e2ee.js  transform-worker.js
public/js/protocol/: signaling.js
scripts/: smoke-test.js
src/: client.cpp  server.cpp
